--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ configurations {
 	}
 }
 
+compileJava {
+	options.compilerArgs << "-parameters"
+}
+
 repositories {
 	mavenCentral()
 }
@@ -27,7 +31,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 
-	implementation 'mysql:mysql-connector-java:8.0.32'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	//runtimeOnly 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
