--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,16 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-
+	//login
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation platform('org.springframework.boot:spring-boot-dependencies:2.7.15')
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	//iamport
 	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
 }
